css/jquery.terminal-src.css
/* ... */
@supports (-ms-ime-align:auto) {
    .terminal h1::selection,
    .terminal h2::selection,
    .terminal h3::selection,
    .terminal h4::selection,
    .terminal h5::selection,
    .terminal h6::selection,
    .terminal pre::selection,
    .terminal td::selection,
    .terminal .terminal-output div div::selection,
    .terminal .terminal-output div div a::selection,
    .cmd span[data-text]::selection {
        background-color: rgba(170, 170, 170, 0.99);
        color: #000;
    }
}
/* PrismJS style overwrites */
.terminal .token.token,
.terminal .token.operator,
.terminal .token.entity,
.terminal .token.variable,
.terminal .token.url,
.terminal .token.string,
.terminal .style .token.string,
.terminal .token.token,
.cmd .token.operator,
.cmd .token.entity,
.cmd .token.variable,
.cmd .token.url,
.cmd .token.string,
.cmd .style .token.string,
.cmd .token.token {
    background-color: inherit;
}
/* FireFox hack
@supports (-moz-animation: foo) {
    .terminal,
    .terminal .terminal-output > :not(.raw) span,
    .terminal .terminal-output > :not(.raw) a,
    .terminal .terminal-output > :not(.raw) div,
    .cmd,
    .cmd span,
    .cmd div {
        line-height: calc(var(--size, 1) * 13px);
    }
}
*/
/* style for autocomplete menu */
.cmd .cursor-wrapper ul {
    list-style: none;
    margin: 0;
    padding: 0;
    float: left;
    position: absolute;
    top: 14px;
    left: 0;
}
.cmd .cursor-wrapper li {
    cursor: pointer;
    white-space: nowrap;
}
.cmd .cursor-wrapper li:hover {
    background: #aaa;
    color: #000;
}
.cursor-wrapper {
    position: relative;
}
.terminal-output img {
    vertical-align: top;
}
.cmd img {
    height: 14px;
    height: calc(var(--size, 1) * (14px / var(--pixel-density, 1)));
    border: 1px solid transparent;
}
.cmd-cursor img {
    border-color: #ccc;
    border-color: var(--color, #ccc);
}
.terminal-output svg.terminal-broken-image {
    height: calc(var(--size, 1) * (14px / var(--pixel-density, 1)));
}
.terminal-output svg.terminal-broken-image use {
    fill: var(--color, #ccc);
}
.terminal-error {
    --color: var(--error-color);
}
.terminal-glow {
    --animation: terminal-glow;
}
.terminal-glow span[data-text],
.terminal-glow .cmd-prompt > span,
.terminal-glow a[data-text],
.terminal-glow [data-text] span,
.terminal-glow .terminal-output > div span,
.terminal-glow .terminal-output > div a[href] {
    text-shadow: 1px 1px 5px #ccc;
    text-shadow: 1px 1px 5px var(--color, #ccc);
}
/* is_bottom detection */
.terminal-scroll-marker {
    position: relative;
    height: 1px;
    height: calc(1px / var(--pixel-density, 1));
    margin-top: -1px;
    margin-top: calc(-1px / var(--pixel-density, 1));
    z-index: 100;
}
.terminal-scroll-marker div {
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
    z-index: 200;
}
.terminal-less {
    touch-action: none;
    overscroll-behavior-y: contain;
}
/*
 * mobile scroll fix, with help from StackOverflow
 * https://stackoverflow.com/a/60535925/387194
 */
.terminal-mobile.terminal-less .terminal-wrapper {
    pointer-events: none;
}
.terminal-mobile.terminal-less .terminal-output a, .cmd-editable {
    pointer-events: visible;
}
.cmd-editable::before {
    content: attr(data-cmd-prompt);
    display: inline-block;
}
.cmd-editable {
    position: fixed;
    top: 0;
    right: 0;
    left: 0;
    bottom: 0;
    z-index: 500;
    color: transparent;
    background: transparent;
    opacity: 0.01;
    outline: 0px solid transparent;
}
/* Scrollbar */
.terminal-scroller::-webkit-scrollbar {
    width: calc(6px / var(--pixel-density, 1));
    height: calc(6px / var(--pixel-density, 1));
    background: var(--background, #000);
}
.terminal-scroller::-webkit-scrollbar-thumb {
    background: var(--color, #aaa);
}
.terminal-scroller::-webkit-scrollbar-thumb:hover {
    background: var(--color, #aaa);
}
.terminal-scroller {
    scrollbar-color: #aaa #000;
    scrollbar-color: var(--color, #aaa) var(--background, #000);
    scrollbar-width: thin;
}

/* visially hidden */
.terminal-hidden {
    position: absolute !important;
    width: 1px !important;
    height: 1px !important;
    padding: 0 !important;
    margin: -1px !important;
    overflow: hidden !important;
    clip: rect(0,0,0,0) !important;
    white-space: nowrap !important;
    border: 0 !important;
}
/*
 * Allow to change scrollbar color
 */
.terminal-wrapper {
    --color: var(--base-color);
    --background: var(--base-background);
}
.cmd .token {
    --original-color: var(--color);
}
.terminal .terminal-blink, .cmd .terminal-blink {
    animation: terminal-ansi-blink 1s steps(2, start) infinite;
    -webkit-animation: terminal-ansi-blink 1s steps(2, start) infinite;
}
/* Allow transparent background #698 */
.terminal .terminal-output,
.terminal .terminal-output * {
  --background: transparent;
}
.terminal .cmd * {
  --background: transparent;
}
.terminal .cmd::selection,
.terminal .cmd *::selection,
.terminal .terminal-output::selection,
.terminal .terminal-output *::selection {
  --background: var(--base-background);
}
@keyframes terminal-ansi-blink {
    to {
        color: var(--background);
    }
}
@-webkit-keyframes terminal-ansi-blink {
    to {
        color: var(--background);
     }
}
@media (prefers-reduced-motion) {
    :root {
        --animation: terminal-none;
    }
}

